version/0.16/_sources/api/solver/_autosummary/settings/porous_jump.rst.txt
:orphan:

.. _porous_jump:

porous_jump
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.porous_jump.porous_jump
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`porous_jump_child <porous_jump_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

